Added symlink functions. Updated documentation.
Updated all documentation and cleaned up old code.

--- a/help/About.html
+++ b/help/About.html
@@ -8,7 +8,7 @@
 
 <body>
 <p align="center"><font size="+1">CyrusBuilt File Utilities Library</font></p>
-<p align="center"><strong>v1.0.0.8</strong></p>
+<p align="center"><strong>v1.0.2.2</strong></p>
 <p align="center">By Cyrus <a href="mailto:cyrusbuilt@gmail.com">&lt;cyrusbuilt at gmail dot com&gt;</a></p>
 <p align="center"><a class="ext" href="http://www.cyrusbuilt.net">CyrusBuilt Homepage</a></p>
 <H1>Synopsis</H1>
@@ -39,7 +39,11 @@
 			<li>Rename a file or directory with progress dialog</li>
 			<li>Check if a directory is empty</li>
 			<li>Get the directory of a specified file path</li>
-			<li>Truncate a file name to DOS style 8.3 format.</li>
+			<li>Truncate a file name to DOS style 8.3 format</li>
+			<li>Get the system drive letter</li>
+			<li>Get the local profiles directory</li>
+			<li>Remove a directory only if it is empty</li>
+			<li>Create symlinks and check to see if a directory is a symlink.</li>
 		</ul>
 		</p><br>
 		This library is distributed under the <a href="license.txt">GPL v2 License</a>.  Click 
