--- a/help/Function Reference.html
+++ b/help/Function Reference.html
@@ -82,6 +82,18 @@ Click on a function name for a detailed description.</p>
 		<td><a href="_FileTruncateName.html">_FileTruncateName</a></td>
 		<td>Returns a truncated file name in 8.3 (8 character name, 3 character extension) DOS style format.</td>
 	</tr>
+	<tr>
+		<td><a href="_FileGetSystemDrive.html">_FileGetSystemDrive</a></td>
+		<td>Returns the logical drive letter of the partition Windows is installed on.</td>
+	</tr>
+	<tr>
+		<td><a href="_FileGetProfilesDir.html">_FileGetProfilesDir</a></td>
+		<td>Returns the full path of the local profiles directory.</td>
+	</tr>
+	<tr>
+		<td><a href="_FileRemoveDirIfEmpty.html">_FileRemoveDirIfEmpty</a></td>
+		<td>Removes a specified directory only if it is empty.</td>
+	</tr>
 </table>
 </body>
 </html>
