--- a/help/_DirIsSymlink.html
+++ b/help/_DirIsSymlink.html
@@ -2,33 +2,34 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Function Reference Template</title>
+<title>Function _DirIsSymlink</title>
 <link href="default.css" rel="stylesheet" type="text/css"
 </head>
 
 <body>
 <h1>Function Reference</h1>
-<font size="+1">Function name</font>
+<font size="+1">_DirIsSymlink</font>
 <hr size="2" />
-<p>Function description.<br /></p>
+<p><br />Checks to see if the specified path is a symlink (reparse point).</p>
 
 <p class="codeheader">
-Function ( Parameter )<br />
+_DirIsSymlink( dirPath )<br />
 </p>
 <p>&nbsp;</p>
 
 <p><b>Parameters</b></p>
 <table border="1" width="100%" cellspacing="0" cellpadding="3" bordercolor="#C0C0C0">
 	<tr>
-		<td width="15%">Parameter Name</td>
-		<td width="85%">Parameter description.</td>
+		<td width="15%">dirPath</td>
+		<td width="85%">The directory path to check.</td>
 	</tr>
 </table>
 
 <p>&nbsp;</p>
 
 <p><b>Return Value</b></p>
-Value name - value description.
+<b>Success</b> - True<br />
+<b>Failure</b> - False if path is empty, does not exist, or is not a symlink.
 <p>&nbsp;</p>
 
 <p><b>Remarks</b></p>
@@ -37,13 +38,14 @@ None.<br />
 <p>&nbsp;</p>
 
 <p><b>Related</b></p>
-None.
+<a href="_DirMakeSymLink.html">_DirMakeSymlink</a>
 <p>&nbsp;</p>
 
 <p><b>Example</b></p>
 <p class="codebox">
 <br />
 <span><span class="syntax">#include</span><span class="space"> </span><span class="string">"FileLib.au3"</span><br />
-<span class="var">$Result</span><span class="space"> </span><span class="operator">=</span><span class="space"> </span><span class="method">SomeMethod</span><span class="operator">()</span>
+<span class="var">$Result</span><span class="space"> </span><span class="operator">=</span><span class="space"> </span><span class="method">_DirIsSymlink</span><span class="operator">(</span><span class="string">"\MyDocs"</span><span class="operator">)</span><br />
+<span class="comment">;$Result = True</span><br />
 </body>
 </html>
