--- a/help/_DiskIsNetwork.html
+++ b/help/_DiskIsNetwork.html
@@ -13,14 +13,14 @@
 <p>Determines if a specified drive letter is a network drive.<br /></p>
 
 <p class="codeheader">
-_DiskIsNetwork ( Drive )<br />
+_DiskIsNetwork ( "drive" )<br />
 </p>
 <p>&nbsp;</p>
 
 <p><b>Parameters</b></p>
 <table border="1" width="100%" cellspacing="0" cellpadding="3" bordercolor="#C0C0C0">
 	<tr>
-		<td width="15%">Drive</td>
+		<td width="15%">drive</td>
 		<td width="85%">A logical drive letter followed by a colon. i.e.: "D:"</td>
 	</tr>
 </table>
