--- a/help/_FileExtension.html
+++ b/help/_FileExtension.html
@@ -10,17 +10,17 @@
 <h1>Function Reference</h1>
 <font size="+1">_FileExtension</font>
 <hr size="2" />
-<p>Function description.<br /></p>
+<p>Gets the file extension of the specified filed path.<br /></p>
 
 <p class="codeheader">
-_FileExtension ( Path )<br />
+_FileExtension ( "path" )<br />
 </p>
 <p>&nbsp;</p>
 
 <p><b>Parameters</b></p>
 <table border="1" width="100%" cellspacing="0" cellpadding="3" bordercolor="#C0C0C0">
 	<tr>
-		<td width="15%">Path</td>
+		<td width="15%">path</td>
 		<td width="85%">The name or full path of the file to get the extension of.</td>
 	</tr>
 </table>
@@ -48,6 +48,6 @@ None.
 <span class="syntax">#include</span><span class="space"> </span><span class="string">"FileLib.au3"</span><br />
 <span class="var">$Extension</span><span class="space"> </span><span class="operator">=</span><span class="space"> </span><span class="method">_FileExtension</span><span class="operator">(</span><span class="string">"myfile.txt"</span><span class="operator">)</span>
 <br />
-<span class="comment">;$Extension = "txt"</span>
+<span class="comment">;$extension = "txt"</span>
 </body>
 </html>
