--- a/help/_FileTruncateName.html
+++ b/help/_FileTruncateName.html
@@ -13,14 +13,14 @@
 <p>Returns a truncated file name in 8.3 (8 character name, 3 character extension) DOS style format.<br /></p>
 
 <p class="codeheader">
-_FileTruncateName ( FileName )<br />
+_FileTruncateName ( "fileName" )<br />
 </p>
 <p>&nbsp;</p>
 
 <p><b>Parameters</b></p>
 <table border="1" width="100%" cellspacing="0" cellpadding="3" bordercolor="#C0C0C0">
 	<tr>
-		<td width="15%">FileName</td>
+		<td width="15%">fileName</td>
 		<td width="85%">A full path to a specific file.</td>
 	</tr>
 </table>
@@ -30,7 +30,7 @@ _FileTruncateName ( FileName )<br />
 <p><b>Return Value</b></p>
 <b>Success</b> - The truncated file name string.<br />
 <b>Failure</b> - Returns the parameter and sets @error to:<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1 - $FileName does not exist, is a directory, or not a fully-qualified file path.<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1 - $fileName does not exist, is a directory, or not a fully-qualified file path.<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2 - Unable to extract container directory from path.<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3 - Exceeded 100 attempts to name the file to something that does not already exist in the path.
 <p>&nbsp;</p>
