--- a/help/_FileCompare.html
+++ b/help/_FileCompare.html
@@ -13,18 +13,18 @@
 <p>Compares 2 files to see if they are the same.<br /></p>
 
 <p class="codeheader">
-_FileCompare ( File1, File2 )<br />
+_FileCompare ( "file1", "file2" )<br />
 </p>
 <p>&nbsp;</p>
 
 <p><b>Parameters</b></p>
 <table border="1" width="100%" cellspacing="0" cellpadding="3" bordercolor="#C0C0C0">
 	<tr>
-		<td width="15%">File1</td>
+		<td width="15%">file1</td>
 		<td width="85%">First file to compare.</td>
 	</tr>
 	<tr>
-		<td>File2</td>
+		<td>file2</td>
 		<td>Second file to compare.</td>
 	</tr>
 </table>
@@ -35,8 +35,8 @@ _FileCompare ( File1, File2 )<br />
 <b>True</b>  - Files are the same.<br />
 <b>False</b> - Files are different.<br />
 Sets @error to:<br />
-1 - File1 not defined, is a directory, or does not exist.<br />
-2 - File2 not defined, is a directory, or does not exist.<br />
+1 - file1 not defined, is a directory, or does not exist.<br />
+2 - file2 not defined, is a directory, or does not exist.<br />
 3 - Files did not match or 'FC' command error and sets @extended to the ERRORLEVEL returned by 'FC'.<br />
 <p>&nbsp;</p>
 
