--- a/help/_FileGetProfilesDir.html
+++ b/help/_FileGetProfilesDir.html
@@ -2,33 +2,29 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Function Reference Template</title>
+<title>Function _FileGetProfilesDir</title>
 <link href="default.css" rel="stylesheet" type="text/css"
 </head>
 
 <body>
 <h1>Function Reference</h1>
-<font size="+1">Function name</font>
+<font size="+1">_FileGetProfilesDir</font>
 <hr size="2" />
-<p>Function description.<br /></p>
+<p>Gets the local profiles directory from the registry.<br /></p>
 
 <p class="codeheader">
-Function ( Parameter )<br />
+_FileGetProfilesDir ( )<br />
 </p>
 <p>&nbsp;</p>
 
 <p><b>Parameters</b></p>
-<table border="1" width="100%" cellspacing="0" cellpadding="3" bordercolor="#C0C0C0">
-	<tr>
-		<td width="15%">Parameter Name</td>
-		<td width="85%">Parameter description.</td>
-	</tr>
-</table>
+None.
 
 <p>&nbsp;</p>
 
 <p><b>Return Value</b></p>
-Value name - value description.
+Success - Returns the full path of the local profiles directory.<br />
+Failure - Returns "" and sets @error = 1.
 <p>&nbsp;</p>
 
 <p><b>Remarks</b></p>
@@ -37,13 +33,15 @@ None.<br />
 <p>&nbsp;</p>
 
 <p><b>Related</b></p>
-None.
+RegRead (see AutoItV3 documentation).
 <p>&nbsp;</p>
 
 <p><b>Example</b></p>
 <p class="codebox">
 <br />
 <span><span class="syntax">#include</span><span class="space"> </span><span class="string">"FileLib.au3"</span><br />
-<span class="var">$Result</span><span class="space"> </span><span class="operator">=</span><span class="space"> </span><span class="method">SomeMethod</span><span class="operator">()</span>
+<span class="var">$Result</span><span class="space"> </span><span class="operator">=</span><span class="space"> </span><span class="method">_FileGetProfilesDir</span><span class="operator">()</span>
+<br /><br />
+<span class="comment">;$Result = "C:\Documents and Settings"</span>
 </body>
 </html>
