--- a/help/_FileIsDir.html
+++ b/help/_FileIsDir.html
@@ -13,14 +13,14 @@
 <p>Determines whether or not the supplied path is a directory.<br /></p>
 
 <p class="codeheader">
-_FileIsDir ( Path )<br />
+_FileIsDir ( "path" )<br />
 </p>
 <p>&nbsp;</p>
 
 <p><b>Parameters</b></p>
 <table border="1" width="100%" cellspacing="0" cellpadding="3" bordercolor="#C0C0C0">
 	<tr>
-		<td width="15%">Path</td>
+		<td width="15%">path</td>
 		<td width="85%">The path to check.</td>
 	</tr>
 </table>
