--- a/help/_FileRecurseBuildList.html
+++ b/help/_FileRecurseBuildList.html
@@ -11,22 +11,26 @@
 <font size="+1">_FileRecurseBuildList</font>
 <hr size="2" />
 <p>Performs file recursion on the specified directory and builds an array containing the full path to every file
-the specified directory and every subdirectory.<br /></p>
+matching the search parameter (all files by default) in the specified directory and every subdirectory.<br /></p>
 
 <p class="codeheader">
-_FileRecurseBuildList ( Path, ByRef aFiles )<br />
+_FileRecurseBuildList ( "path", ByRef aFiles, "filename" )<br />
 </p>
 <p>&nbsp;</p>
 
 <p><b>Parameters</b></p>
 <table border="1" width="100%" cellspacing="0" cellpadding="3" bordercolor="#C0C0C0">
 	<tr>
-		<td width="15%">Path</td>
+		<td width="15%">path</td>
 		<td width="85%">The path to check.</td>
 	</tr>
 	<tr>
 		<td width="15%">ByRef aFiles</td>
 		<td width="85%">An array to contain the file paths and then count.</td>
+	</tr>
+	<tr>
+		<td width="15%">filename</td>
+		<td width="85%">The filename string to search for in $Path (* and ? wildcards accepted. *.* is the default).</td>
 	</tr>
 </table>
 
@@ -57,7 +61,7 @@ None.<br />
 <span class="syntax">Dim</span><span class="space"> </span><span class="var">$aResult</span><span class="operator">[</span><span class="number">1</span><span class="operator">]</span><br />
 <span class="var">$aResult</span><span class="operator">[</span><span class="number">0</span<span class="operator">]</span><span class="space"> </span><span class="operator">=</span><span class="space"> </span><span class="number">0</span>
 <br />
-<span class="var">$aResult</span><span class="space"> </span><span class="operator">=</span><span class="space"> </span><span class="method">_FileRecurseBuildList</span><span class="operator">(</span><span class="macro">@ScriptDir</span><span class="operator">,</span><span class="space"> </span><span class="var">$aResult</span><span class="operator">)</span>
+<span class="var">$aResult</span><span class="space"> </span><span class="operator">=</span><span class="space"> </span><span class="method">_FileRecurseBuildList</span><span class="operator">(</span><span class="macro">@ScriptDir</span><span class="operator">,</span><span class="space"> </span><span class="string">""</span><span class="operator">,</span><span class="space"> </span><span class="var">$aResult</span><span class="operator">)</span>
 <br />
 <span class="method">_ArrayDisplay</span><span class="operator">(</span><span class="var">$aResult</span><span class="operator">)</span>
 </body>
